# WatchBack

./: .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Directory.Build.props  Dockerfile  Dockerfile.old  README.md  WatchBack.sln  WatchBack.sln.DotSettings  auth.py  build-tailwind.sh  cli.py  coverage.runsettings  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  release.yml  security.yml
charts/watchback/: .helmignore  Chart.yaml  values.yaml
frontend/: tsconfig.json
frontend/css/: animations.css  app.css  base.css  components.css  fonts.css  tw.css
frontend/src/: main.ts  strings.ts  types.ts
frontend/tests/: index-html.test.ts  strings.test.ts
src/WatchBack.Api/: Program.cs  SentimentScorer.cs  SyncGate.cs  SyncProgressReporter.cs  SyncTrigger.cs  WatchBack.Api.csproj  appsettings.Development.json  builtin-subreddit-mappings.json
src/WatchBack.Core/: Class1.cs  WatchBack.Core.csproj
src/WatchBack.Infrastructure/: Class1.cs  WatchBack.Infrastructure.csproj
src/WatchBack.Resources/: ErrorMessages.Designer.cs  ErrorMessages.es.resx  (+8 more)
static/: app.css  app.js  index.html  site.webmanifest  tailwind.css
tests/: .editorconfig  conftest.py  helpers.py  playwright_helpers.py  test_accessibility.py  test_bluesky.py  test_forward_auth.py  test_main.py  test_markdown.mjs  test_pullpush.py  test_trakt_session.py
(+194 files in other folders)
