[project]
name = "watchback"
version = "0.1.0"
description = "Self-hosted TV companion — aggregates reactions from Trakt, Bluesky, and Reddit filtered to the original air-date window"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "diskcache>=5.6.3",
    "fastapi>=0.135.1",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "axe-playwright-python>=0.1.7",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-playwright>=0.7.2",
]

[tool.coverage.run]
source = ["main"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]
